made some style changes and fixed layout breaks in the nav component

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -143,7 +143,7 @@
     border-bottom: 1px solid var(--gray-3);
 }
 
-@media (min-width: 1050px) {
+@media (min-width: 1110px) {
     .nav {
         height: 50%;
     }
@@ -164,9 +164,7 @@
             flex-basis: 25%;
     }
     .nav__section > * {
-        -webkit-box-flex: 1;
-            -ms-flex-positive: 1;
-                flex-grow: 1;
+        gap: 1.5rem;
     }
     .nav__links {
         -ms-grid-columns: 1fr 1fr;
